--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,8 @@
 *.html diff=html
 *.md diff=markdown
 *.php diff=php
-*.JavaScript linguist-detectable=false
+* linguist-vendored
+*.js linguist-vendored=false
 
 /.github export-ignore
 CHANGELOG.md export-ignore
