--- a/.gitattributes
+++ b/.gitattributes
@@ -5,8 +5,7 @@
 *.html diff=html
 *.md diff=markdown
 *.php diff=php
-* linguist-vendored
-*.js linguist-vendored=false
+*.* linguist-language=laravel
 
 /.github export-ignore
 CHANGELOG.md export-ignore
